# BasePhysics

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
examples/: main.cpp
examples/Demos/: PhysicsDemo.cpp  PhysicsDemo.hpp  PoolDemo.cpp  PoolDemo.hpp
examples/Demos/Utils/: Camera.cpp  Camera.hpp  Random.hpp
include/BasePhysics/: BasePhysics.hpp
include/BasePhysics/Collision/: Collider.hpp  ColliderShapes.hpp
include/BasePhysics/Collision/BroadPhase/: AABB.hpp  GridEntry.hpp  HashGrid.hpp
include/BasePhysics/Collision/NarrowPhase/: Collisions.hpp  ContactManifold.hpp
include/BasePhysics/Core/: Geometry.hpp  Math.hpp  Utils.hpp  Vec2.hpp
include/BasePhysics/Physics/: BodyPreset.hpp  Joint.hpp  JointPreset.hpp  JointTypes.hpp  PhysicsScene.hpp  Rigidbody.hpp
src/: main.cpp
src/Collision/: AABB.h  AABB.hpp  Collider.cpp  Collider.h  Collider.hpp  ColliderShapes.hpp  Collisions.cpp  Collisions.h  Collisions.hpp  ContactManifold.hpp  HashGrid.cpp  HashGrid.hpp
src/Collision/BroadPhase/: AABB.hpp  HashGrid.cpp  HashGrid.hpp
src/Collision/NarrowPhase/: Collisions.cpp  Collisions.hpp  ContactManifold.hpp
src/Core/: Geometry.cpp  Geometry.hpp  Math.h  Math.hpp  Utils.hpp  Vec2.h  Vec2.hpp
src/Demo/: App.cpp  App.h  App.hpp  Camera.cpp  Camera.h  Camera.hpp  Demo.cpp  Demo.h  PoolDemo.cpp  PoolDemo.hpp  Random.hpp  RenderUtils.h  WindowType.hpp
src/Physics/: BodyPreset.hpp  Joint.cpp  PhysicsScene.cpp  PhysicsScene.h  PhysicsScene.hpp  Rigidbody.cpp  Rigidbody.h  Rigidbody.hpp
